--- a/hdfs/pom.xml
+++ b/hdfs/pom.xml
@@ -30,6 +30,20 @@
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
 
+		<!-- 引入hadoop-common Jar包 -->
+		<dependency>
+			<groupId>org.apache.hadoop</groupId>
+			<artifactId>hadoop-common</artifactId>
+			<version>2.8.4</version>
+		</dependency>
+
+		<!-- 引入hadoop-hdfs Jar包 -->
+		<dependency>
+			<groupId>org.apache.hadoop</groupId>
+			<artifactId>hadoop-hdfs</artifactId>
+			<version>2.8.4</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
