--- a/mapreduce/pom.xml
+++ b/mapreduce/pom.xml
@@ -4,12 +4,12 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.hks</groupId>
-	<artifactId>hdfs</artifactId>
+	<artifactId>mapreduce</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>hdfs</name>
-	<description>hdfs project for Spring Boot</description>
+	<name>mapreduce</name>
+	<description>mapReduce project for Spring Boot</description>
 
 	<parent>
 		<groupId>com.hks</groupId>
@@ -36,14 +36,21 @@
 			<version>2.8.4</version>
 		</dependency>
 
-		<!-- 引入hadoop-hdfs Jar包 -->
+		<!-- 引入hadoop-mapreduce-client-core Jar包 -->
 		<dependency>
 			<groupId>org.apache.hadoop</groupId>
-			<artifactId>hadoop-hdfs</artifactId>
+			<artifactId>hadoop-mapreduce-client-core</artifactId>
 			<version>2.8.4</version>
 		</dependency>
 
-		<dependency>
+        <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.49</version>
+        </dependency>
+
+        <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
@@ -53,11 +60,10 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
 			</plugin>
 		</plugins>
 	</build>
-
 
 </project>
