--- a/spring-boot-hive/src/main/resources/application.yml
+++ b/spring-boot-hive/src/main/resources/application.yml
@@ -2,8 +2,8 @@ hive:
   url: jdbc:hive2://127.0.0.1:10000/default
   driver-class-name: org.apache.hive.jdbc.HiveDriver
   type: com.alibaba.druid.pool.DruidDataSource
-  user: root
-  password: 123456
+  user: zhangsan
+  password: 123456789
   # 下面为连接池的补充设置，应用到上面所有数据源中
   # 初始化大小，最小，最大
   initialSize: 1
