--- a/spring-boot-flink/pom.xml
+++ b/spring-boot-flink/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.hks</groupId>
-	<artifactId>flink</artifactId>
+	<artifactId>spring-boot-flink</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>flink</name>
-	<description>flink project for Spring Boot</description>
+	<name>spring-boot-flink</name>
+	<description>spring-boot-flink project for Spring Boot</description>
 
 	<properties>
 		<java.version>1.8</java.version>
