--- a/maven-flume/pom.xml
+++ b/maven-flume/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.hks</groupId>
-    <artifactId>flume</artifactId>
+    <artifactId>maven-flume</artifactId>
     <version>1.0-SNAPSHOT</version>
     <build>
         <plugins>
